[package]
name = "Launcher"
version = "0.1.0"
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2018"

[lib]
name = "Launcher"
crate-type = ["cdylib"]

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]